[package]
name = "benwis_leptos"
authors = ["benwis <ben@celcyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
cfg-if = "1"
console_error_panic_hook = "0.1"
http = "0.2"
leptos = "0.6"
leptos_integration_utils = { version = "0.6", optional = true }
leptos_meta = "0.6"
leptos_router = "0.6"

leptos-spin = { path="../leptos-spin/leptos-spin", optional = true}
leptos-spin-macro = { path="../leptos-spin/leptos-spin-macro", optional = true}
serde = { version = "1.0", features = ["derive"] }
spin-sdk = { version = "2.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde_json = "1.0.113"
tracing = "0.1.40"
indexmap = { version = "2.2.2", features = ["serde"] }
chrono = { version = "0.4.33", features = ["serde"] }
web-sys = { version = "0.3.64", features = ["HtmlDocument"] }
thiserror = "1.0.56"
miette = "5.10.0"
slug = "0.1.5"
toml = "0.8.9"
parking_lot = "0.12.1"
femark = { version = "0.1.5", optional = true }
strum = { version = "0.26.1"}
strum_macros = { version = "0.26.1" }
leptos-use = { version = "0.10.1"}
argon2 = { version = "0.5.3", optional = true }
async-session = { version = "3.0.0", optional = true }
async-trait = "0.1.77"

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
  "dep:wasm-bindgen",
  "dep:leptos-spin-macro"
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos/spin",
  "leptos-spin-macro/ssr",
  "leptos-use/ssr",
  "dep:leptos-spin-macro",
  "dep:spin-sdk",
  "dep:leptos-spin",
  "dep:leptos_integration_utils",
  "dep:argon2",
  "dep:async-session",
]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "benwis-leptos"
tailwind-input-file = "styles/input.css"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
assets-dir = "public"
